[package]
name = "pam_multifac"
version = "0.1.0"
edition = "2021"

[lib]
name = "pam_multifac"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
config = "0.12.0"
data-encoding = "2.3.2"
handlebars = "4.2.2"
ldap3 = "0.10.2"
pamsm = { version = "0.5.0", features = [ "libpam" ] }
reqwest = { version = "0.11.10", features = [ "json" ] }
ring = "0.16.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2.2"
yubico = "0.10.0"
